--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/537.pdf">
 	TARDIS: A Foundation of Time-Lock Puzzles in UC</a></b><br/>
 		with Carsten Baum, Bernardo David, Jesper Buus Nielsen, Sabine Oechsner<br/>
-		To appear at Eurocrypt 2021<br/>
+		To appear at EUROCRYPT 2021<br/>
 	</span><br/>
 </li>
 
@@ -106,7 +106,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/942.pdf">
 	Insured MPC: Efficient Secure Computation with Financial Penalties</a></b><br/>
 		with Carsten Baum, Bernardo David<br/>
-		Financial Cryptography and Data Security (FC) 2020<br/>
+		Financial Cryptography 2020<br/>
 	</span><br/>
 </li>
 
@@ -131,7 +131,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/983.pdf">Efficient UC Commitment Extension 
 		with Homomorphism for Free (and Applications)</a></b><br/>
 		with Ignacio Cascudo, Ivan Damg&aring;rd, Bernardo David, Nico D&ouml;ttling, Irene Giacomelli<br/>
-		Asiacrypt 2019<br/>
+		ASIACRYPT 2019<br/>
 	</span><br/>
 </li>
 
@@ -165,7 +165,7 @@
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/157.pdf">ROYALE: A Framework for Universally 
     	Composable Card Games with Financial Rewards and Penalties Enforcement</a></b><br/>
 		with Bernardo David, Mario Larangeira<br/>
-		Financial Cryptography and Data Security (FC) 2019<br/> 
+		Financial Cryptography 2019<br/> 
 	</span><br/>   
 </li>
 
@@ -190,7 +190,7 @@
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2017/899.pdf">Kaleidoscope: 
     	An Efficient Poker Protocol with Payment Distribution and Penalty Enforcement</a></b><br/>
 		with Bernardo David, Mario Larangeira<br/>
-		Financial Cryptography and Data Security (FC) 2018<br/> 
+		Financial Cryptography 2018<br/> 
 	</span><br/>   
 </li>
 
@@ -358,7 +358,7 @@
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2011/581.pdf">Standard Security Does Not 
     	Imply Security Against Selective-Opening</a></b><br/>
 		with Mihir Bellare, Brent Waters, Scott Yilek<br/>
-		Eurocrypt 2012<br/>
+		EUROCRYPT 2012<br/>
 	</span><br/>
 </li>
 
