--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		<br/><br/>
 		
 		Previously I was a postdoctoral researcher in the <a href="https://cyber.biu.ac.il">Center for Research in 
-		Applied Cryptography and Cyber Security</a> at Bar-Ilan University and in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
-		and Security Research Group</a> at Aarhus University. I got my doctoral degree 
-		from the Karlsruhe Institute of Technology, where I worked in 
+		Applied Cryptography and Cyber Security</a> at Bar-Ilan University, Israel, and in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
+		and Security Research Group</a> at Aarhus University, Denmark. I got my doctoral degree 
+		from the Karlsruhe Institute of Technology, Germany, where I worked in 
 		the <a href="http://crypto.iti.kit.edu/english/index.php">Cryptography and Security Group</a>. 
 		My thesis is available <a href="./pdf/thesis.pdf">here.</a> 
 		
