--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
 	</span><br/>
 </li>
 
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://www.mdpi.com/2079-9292/10/16/2034">
+	Security, Privacy, and Reliability in Digital Healthcare Systems Using Blockchain</a></b><br/>
+		with Aitizaz Ali, Jehad Ali, Mohammed Baz, Mehedi Masud, Muhammad Fermi Pasha, Hasliza A. Rahim<br/>
+		Electronics, 2021<br/>
+	</span><br/>
+</li>
+
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/1291.pdf">
 	Efficient Composable Oblivious Transfer from CDH in the Global Random Oracle Model</a></b><br/>
