--- a/index.html
+++ b/index.html
@@ -54,13 +54,6 @@
 </li>
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b> Geo-DRS: Geometric Dynamic Range Search on Spatial Data with Backward and Content Privacy</b><br/>
-		with Shabnam Kasra Kermanshahi, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
-		To appear at ESORICS 2021<br/>
-	</span><br/>
-</li>
-
-<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2102.03513.pdf">
 	Privacy-Preserving Video Classification with Convolutional Neural Networks</a></b><br/>
 		with Martine De Cock, Sikha Pentyala<br/>
@@ -73,6 +66,14 @@
 	Privacy-Preserving Feature Selection with Secure Multiparty Computation</a></b><br/>
 		with Martine De Cock, Xiling Li<br/>
 		ICML 2021<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://link.springer.com/chapter/10.1007/978-3-030-88428-4_2">
+	 Geo-DRS: Geometric Dynamic Range Search on Spatial Data with Backward and Content Privacy</b><br/>
+		with Shabnam Kasra Kermanshahi, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
+		ESORICS 2021<br/>
 	</span><br/>
 </li>
 
