--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://link.springer.com/chapter/10.1007/978-3-030-88428-4_2">
-	 Geo-DRS: Geometric Dynamic Range Search on Spatial Data with Backward and Content Privacy</b><br/>
+	 Geo-DRS: Geometric Dynamic Range Search on Spatial Data with Backward and Content Privacy</a></b><br/>
 		with Shabnam Kasra Kermanshahi, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
 		ESORICS 2021<br/>
 	</span><br/>
