--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </li>
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2102.03513.pdf">
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="http://proceedings.mlr.press/v139/pentyala21a/pentyala21a.pdf">
 	Privacy-Preserving Video Classification with Convolutional Neural Networks</a></b><br/>
 		with Martine De Cock, Sikha Pentyala<br/>
 		ICML 2021<br/>
@@ -62,7 +62,7 @@
 </li>
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2102.03517.pdf">
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="http://proceedings.mlr.press/v139/li21e/li21e.pdf">
 	Privacy-Preserving Feature Selection with Secure Multiparty Computation</a></b><br/>
 		with Martine De Cock, Xiling Li<br/>
 		ICML 2021<br/>
