--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
 </li>
 
 <li>
+	<span lang="EN-US" xml:lang="EN-US"><b>
+	Information-Theoretically Secure String Commitments Based on Packet Reordering Channels</b><br/>
+		with Vin&iacute;cius de Morais Alves, Anderson C. A. Nascimento, Rafael Tim&oacute;teo de Sousa J&uacute;nior <br/>
+		To appear at IEEE Access<br/>
+	</span><br/>
+</li>
+
+<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="http://proceedings.mlr.press/v139/pentyala21a/pentyala21a.pdf">
 	Privacy-Preserving Video Classification with Convolutional Neural Networks</a></b><br/>
 		with Martine De Cock, Sikha Pentyala<br/>
@@ -70,14 +78,6 @@
 </li>
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://link.springer.com/chapter/10.1007/978-3-030-88428-4_2">
-	 Geo-DRS: Geometric Dynamic Range Search on Spatial Data with Backward and Content Privacy</a></b><br/>
-		with Shabnam Kasra Kermanshahi, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
-		ESORICS 2021<br/>
-	</span><br/>
-</li>
-
-<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2002.05377.pdf">
 	High Performance Logistic Regression for Privacy-Preserving Genome Analysis</a></b><br/>
 		with Martine De Cock, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen, Ariel Todoki<br/>
@@ -86,6 +86,13 @@
 	</span><br/>
 </li>
 
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://link.springer.com/chapter/10.1007/978-3-030-88428-4_2">
+	 Geo-DRS: Geometric Dynamic Range Search on Spatial Data with Backward and Content Privacy</a></b><br/>
+		with Shabnam Kasra Kermanshahi, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
+		ESORICS 2021<br/>
+	</span><br/>
+</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://www.mdpi.com/2079-9292/10/16/2034">
