--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		
 <br/><br/>
 
-
+<b style="color:red">News: I am on the PC of Eurocrypt 2022 and looking forward to read your great submissions!</b><br/>
 
 <div style="height:1px;font-size:1px;">&nbsp;</div>
 <h2><a href="http://scholar.google.com/citations?user=6NdIS2AAAAAJ&hl=en" target="_blank">Google Scholar</a></h2>
