--- a/index.html
+++ b/index.html
@@ -49,15 +49,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/537.pdf">
 	TARDIS: A Foundation of Time-Lock Puzzles in UC</a></b><br/>
 		with Carsten Baum, Bernardo David, Jesper Buus Nielsen, Sabine Oechsner<br/>
-		To appear at EUROCRYPT 2021<br/>
-	</span><br/>
-</li>
-
-<li>
-	<span lang="EN-US" xml:lang="EN-US"><b>
-	Information-Theoretically Secure String Commitments Based on Packet Reordering Channels</b><br/>
-		with Vin&iacute;cius de Morais Alves, Anderson C. A. Nascimento, Rafael Tim&oacute;teo de Sousa J&uacute;nior <br/>
-		To appear at IEEE Access<br/>
+		EUROCRYPT 2021<br/>
 	</span><br/>
 </li>
 
@@ -93,6 +85,15 @@
 		<b style="color:red">Winner of the IDASH Secure Genome Analysis Competition 2019</b><br/>
 	</span><br/>
 </li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9564062">
+	Information-Theoretically Secure String Commitments Based on Packet Reordering Channels</a></b><br/>
+		with Vin&iacute;cius de Morais Alves, Anderson C. A. Nascimento, Rafael Tim&oacute;teo de Sousa J&uacute;nior <br/>
+		IEEE Access, 2021<br/>
+	</span><br/>
+</li>
+
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://www.mdpi.com/2079-9292/10/16/2034">
