--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
 
 
 <li>
+	<span lang="EN-US" xml:lang="EN-US"><b>
+	On the Shutdown Price of Blockchain Mining Machines</b><br/>
+		with Shange Fu, Joseph K. Liu, Jiangshan Yu<br/>
+		To appear at IEEE Blockchain 2021<br/>
+		<b style="color:red">Best Paper Award</b><br/>
+	</span><br/>
+</li>
+
+<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/537.pdf">
 	TARDIS: A Foundation of Time-Lock Puzzles in UC</a></b><br/>
 		with Carsten Baum, Bernardo David, Jesper Buus Nielsen, Sabine Oechsner<br/>
@@ -74,6 +83,7 @@
 	 Geo-DRS: Geometric Dynamic Range Search on Spatial Data with Backward and Content Privacy</a></b><br/>
 		with Shabnam Kasra Kermanshahi, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
 		ESORICS 2021<br/>
+		<b style="color:red">Invited to best papers special journal issue</b><br/>
 	</span><br/>
 </li>
 
@@ -297,6 +307,7 @@
     	from Strong RSA without Prime Generation</a></b><br/>
 		with David Cash, Eike Kiltz<br/>
 		PKC 2015<br/> 
+		<b style="color:red">Invited to the Journal of Cryptology</b><br/>
 	</span><br/>      
 </li>
 
@@ -353,6 +364,7 @@
     	Deterministic Primitives</a></b><br/>
 		with Masayuki Abe, Jan Camenisch, Maria Dubovitskaya<br/>
 		TCC 2014<br/> 
+		<b style="color:red">Invited to the Journal of Cryptology</b><br/>
 	</span><br/>   
 </li>
 
