--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	 Geo-DRS: Geometric Dynamic Range Search on Spatial Data with Backward and Content Privacy</a></b><br/>
 		with Shabnam Kasra Kermanshahi, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
 		ESORICS 2021<br/>
-		<b style="color:red">Invited to best papers special journal issue</b><br/>
+		<b style="color:red">Invited to the best papers' special journal issue</b><br/>
 	</span><br/>
 </li>
 
