--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 
 
 <li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/754.pdf">
+	Privacy-Preserving Training of Tree Ensembles over Continuous Data</a></b><br/>
+		with Samuel Adams, Chaitali Choudhary, Martine De Cock, David Melanson, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen<br/>
+		To appear at PETS 2022<br/>
+	</span><br/>
+</li>
+
+<li>
 	<span lang="EN-US" xml:lang="EN-US"><b>
 	On the Shutdown Price of Blockchain Mining Machines</b><br/>
 		with Shange Fu, Joseph K. Liu, Jiangshan Yu<br/>
