--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
 	</span><br/>
 </li>
 
+
+
+
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b>
-	On the Shutdown Price of Blockchain Mining Machines</b><br/>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/1574.pdf">
+	On the Shutdown Price of Blockchain Mining Machines</a></b><br/>
 		with Shange Fu, Joseph K. Liu, Jiangshan Yu<br/>
 		To appear at IEEE Blockchain 2021<br/>
 		<b style="color:red">Best Paper Award</b><br/>
