--- a/index.html
+++ b/index.html
@@ -46,15 +46,20 @@
 
 
 <li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/069.pdf">
+	Fast Privacy-Preserving Text Classification based on Secure Multiparty Computation</a></b><br/>
+		with Diego Aranha, Anderson C. A. Nascimento, Davis Railsback, Amanda Resende<br/>
+		To appear at IEEE Transactions on Information Forensics and Security<br/>
+	</span><br/>
+</li>
+
+<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/754.pdf">
 	Privacy-Preserving Training of Tree Ensembles over Continuous Data</a></b><br/>
 		with Samuel Adams, Chaitali Choudhary, Martine De Cock, David Melanson, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen<br/>
 		To appear at PETS 2022<br/>
 	</span><br/>
 </li>
-
-
-
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/1574.pdf">
