--- a/index.html
+++ b/index.html
@@ -62,15 +62,6 @@
 </li>
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/1574.pdf">
-	On the Shutdown Price of Blockchain Mining Machines</a></b><br/>
-		with Shange Fu, Joseph K. Liu, Jiangshan Yu<br/>
-		To appear at IEEE Blockchain 2021<br/>
-		<b style="color:red">Best Paper Award</b><br/>
-	</span><br/>
-</li>
-
-<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/537.pdf">
 	TARDIS: A Foundation of Time-Lock Puzzles in UC</a></b><br/>
 		with Carsten Baum, Bernardo David, Jesper Buus Nielsen, Sabine Oechsner<br/>
@@ -109,6 +100,15 @@
 		with Martine De Cock, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen, Ariel Todoki<br/>
 		BMC Medical Genomics, 2021<br/>
 		<b style="color:red">Winner of the IDASH Secure Genome Analysis Competition 2019</b><br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/1574.pdf">
+	On the Shutdown Price of Blockchain Mining Machines</a></b><br/>
+		with Shange Fu, Joseph K. Liu, Jiangshan Yu<br/>
+		IEEE Blockchain 2021<br/>
+		<b style="color:red">Best Paper Award</b><br/>
 	</span><br/>
 </li>
 
