--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 		
 <br/><br/>
 
+
+<b style="color:red"><a href="https://arxiv.org/pdf/2202.02625.pdf">Our solution</a> was a winner of the iDASH Secure Genome Analysis Competition 2021</b><br/>
+
 <b style="color:red">News: I am on the PC of Eurocrypt 2022 and looking forward to read your great submissions!</b><br/>
 
 <div style="height:1px;font-size:1px;">&nbsp;</div>
