--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <br/><br/>
 
 
-<b style="color:red"><a href="https://arxiv.org/pdf/2202.02625.pdf">Our solution</a> was a winner of the iDASH Secure Genome Analysis Competition 2021</b><br/>
+<b style="color:red">News: <a href="https://arxiv.org/pdf/2202.02625.pdf">Our solution</a> was a winner of the iDASH Secure Genome Analysis Competition 2021</b><br/><br/>
 
 <b style="color:red">News: I am on the PC of Eurocrypt 2022 and looking forward to read your great submissions!</b><br/>
 
