--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <br/><br/>
 
 
-<b style="color:red">News: <a href="https://arxiv.org/pdf/2202.02625.pdf">Our solution</a> was a winner of the iDASH Secure Genome Analysis Competition 2021</b><br/><br/>
+<b style="color:red">News: <a href="https://arxiv.org/pdf/2202.02625.pdf">Our solution</a> was a winner of the iDASH Secure Genome Analysis Competition 2021</b><br/>
 
 
 <div style="height:1px;font-size:1px;">&nbsp;</div>
