--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <br/><br/>
 
 
-<b style="color:red">News: Our solution was a winner of the iDASH Secure Genome Analysis Competition 2021!</b> You can check the details of the solution <a href="https://arxiv.org/pdf/2202.02625.pdf">here</a>.<br/>
+<b style="color:red">News: Our solution was a winner of the iDASH Secure Genome Analysis Competition 2021! You can check the details of the solution <a href="https://arxiv.org/pdf/2202.02625.pdf">here</a>.</b><br/>
 
 
 <div style="height:1px;font-size:1px;">&nbsp;</div>
