--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
 <ul>
 
 
+
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/069.pdf">
-	Fast Privacy-Preserving Text Classification based on Secure Multiparty Computation</a></b><br/>
-		with Diego Aranha, Anderson C. A. Nascimento, Davis Railsback, Amanda Resende<br/>
-		To appear at IEEE Transactions on Information Forensics and Security<br/>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/302.pdf">
+	Post-Quantum Verifiable Random Function from Symmetric Primitives in PoS Blockchain</a></b><br/>
+		with Maxime Buser, Muhammed F. Esgin, Shabnam Kasra Kermanshahi, Veronika Kuchta, Joseph K. Liu, Raphael Phan, Zhenfei Zhang<br/>
+		To appear at ESORICS 2022<br/>
 	</span><br/>
 </li>
 
@@ -58,6 +59,14 @@
 	Privacy-Preserving Training of Tree Ensembles over Continuous Data</a></b><br/>
 		with Samuel Adams, Chaitali Choudhary, Martine De Cock, David Melanson, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen<br/>
 		To appear at PETS 2022<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/069.pdf">
+	Fast Privacy-Preserving Text Classification based on Secure Multiparty Computation</a></b><br/>
+		with Diego Aranha, Anderson C. A. Nascimento, Davis Railsback, Amanda Resende<br/>
+		IEEE Transactions on Information Forensics and Security, 2022<br/>
 	</span><br/>
 </li>
 
