--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/302.pdf">
 	Post-Quantum Verifiable Random Function from Symmetric Primitives in PoS Blockchain</a></b><br/>
-		with Maxime Buser, Muhammed F. Esgin, Shabnam Kasra Kermanshahi, Veronika Kuchta, Joseph K. Liu, Raphael Phan, Zhenfei Zhang<br/>
+		with Maxime Buser, Muhammed F. Esgin, Shabnam Kasra Kermanshahi, Veronika Kuchta, Joseph K. Liu, Rapha&euml;l C.-W. Phan, Zhenfei Zhang<br/>
 		To appear at ESORICS 2022<br/>
 	</span><br/>
 </li>
