--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
 </li>
 
 <li>
+	<span lang="EN-US" xml:lang="EN-US"><b>
+	A Spendable Cold Wallet from QR Video</b><br/>
+		with Myl&egrave;ne C.Q. Farias, Mario Larangeira, Anderson C. A. Nascimento, Jot Virdee<br/>
+		To appear at SECRYPT 2022<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b>
+	 Range Search on Encrypted Spatial Data with Dynamic Updates</b><br/>
+		with Shabnam Kasra Kermanshahi, Shangqi Lai, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
+		To appear at Journal of Computer Security<br/>
+	</span><br/>
+</li>
+
+<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/069.pdf">
 	Fast Privacy-Preserving Text Classification based on Secure Multiparty Computation</a></b><br/>
 		with Diego Aranha, Anderson C. A. Nascimento, Davis Railsback, Amanda Resende<br/>
