--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 		investigations are into privacy-preserving machine learning and blockchain technologies.
 		<br/><br/>
 	
-		
-<br/><br/>
 
 
 <b style="color:red">News: Our solution was a winner of the iDASH Secure Genome Analysis Competition 2021! You can check the details of the solution <a href="https://arxiv.org/pdf/2202.02625.pdf">here</a>.</b><br/>
@@ -516,6 +514,8 @@
 </li>
 
 </ul>
+
+My thesis is available <a href="./pdf/thesis.pdf">here</a>.
 
 </body>
 
