--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		investigations are into privacy-preserving machine learning and blockchain technologies.
 		<br/><br/>
 	
+<b style="color:red">News: I am looking forward to be one of the speakers at the <a href="https://www.conferencemanager.dk/ppmlschool2022">Summer School on Privacy-Preserving Machine Learning</a> that will happen in Copenhagen.</b><br/>
 
 
 <b style="color:red">News: Our solution was a winner of the iDASH Secure Genome Analysis Competition 2021! You can check the details of the solution <a href="https://arxiv.org/pdf/2202.02625.pdf">here</a>.</b><br/>
