--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>
+	(Public) Verifiability For Composable Protocols Without Adaptivity Or Zero-Knowledge</b><br/>
+		with Carsten Baum, Bernardo David<br/>
+		To appear at ProvSec 2022<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b>
 	A Spendable Cold Wallet from QR Video</b><br/>
 		with Myl&egrave;ne C.Q. Farias, Mario Larangeira, Anderson C. A. Nascimento, Jot Virdee<br/>
 		To appear at SECRYPT 2022<br/>
