--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 </li>
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b>
-	(Public) Verifiability For Composable Protocols Without Adaptivity Or Zero-Knowledge</b><br/>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/207.pdf">
+	(Public) Verifiability For Composable Protocols Without Adaptivity Or Zero-Knowledge</a></b><br/>
 		with Carsten Baum, Bernardo David<br/>
 		To appear at ProvSec 2022<br/>
 	</span><br/>
