--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 		I have a keen interest in the design of cryptographic protocols to enhance privacy and most of my current 
 		investigations are into privacy-preserving machine learning and blockchain technologies.
 		<br/><br/>
+		
+<b style="color:red">News: I am part of the Program Committee of <a href="https://fc23.ifca.ai">FC 2023</a> and looking forward to read all your great contributions!</b><br/><br/>
 	
 <b style="color:red">News: I am looking forward to be one of the speakers at the <a href="https://www.conferencemanager.dk/ppmlschool2022">Summer School on Privacy-Preserving Machine Learning</a> in Copenhagen.</b><br/><br/>
 
