--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/302.pdf">
 	Post-Quantum Verifiable Random Function from Symmetric Primitives in PoS Blockchain</a></b><br/>
 		with Maxime Buser, Muhammed F. Esgin, Shabnam Kasra Kermanshahi, Veronika Kuchta, Joseph K. Liu, Rapha&euml;l C.-W. Phan, Zhenfei Zhang<br/>
-		To appear at ESORICS 2022<br/>
+		ESORICS 2022<br/>
 	</span><br/>
 </li>
 
@@ -52,31 +52,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/754.pdf">
 	Privacy-Preserving Training of Tree Ensembles over Continuous Data</a></b><br/>
 		with Samuel Adams, Chaitali Choudhary, Martine De Cock, David Melanson, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen<br/>
-		To appear at PETS 2022<br/>
-	</span><br/>
-</li>
-
-<li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/207.pdf">
-	(Public) Verifiability For Composable Protocols Without Adaptivity Or Zero-Knowledge</a></b><br/>
-		with Carsten Baum, Bernardo David<br/>
-		To appear at ProvSec 2022<br/>
-	</span><br/>
-</li>
-
-<li>
-	<span lang="EN-US" xml:lang="EN-US"><b>
-	A Spendable Cold Wallet from QR Video</b><br/>
-		with Myl&egrave;ne C.Q. Farias, Mario Larangeira, Anderson C. A. Nascimento, Jot Virdee<br/>
-		To appear at SECRYPT 2022<br/>
-	</span><br/>
-</li>
-
-<li>
-	<span lang="EN-US" xml:lang="EN-US"><b>
-	 Range Search on Encrypted Spatial Data with Dynamic Updates</b><br/>
-		with Shabnam Kasra Kermanshahi, Shangqi Lai, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
-		To appear at Journal of Computer Security<br/>
+		PETS 2022<br/>
 	</span><br/>
 </li>
 
@@ -85,6 +61,30 @@
 	Fast Privacy-Preserving Text Classification based on Secure Multiparty Computation</a></b><br/>
 		with Diego Aranha, Anderson C. A. Nascimento, Davis Railsback, Amanda Resende<br/>
 		IEEE Transactions on Information Forensics and Security, 2022<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b>
+	 Range Search on Encrypted Spatial Data with Dynamic Updates</b><br/>
+		with Shabnam Kasra Kermanshahi, Shangqi Lai, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
+		Journal of Computer Security<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/207.pdf">
+	(Public) Verifiability For Composable Protocols Without Adaptivity Or Zero-Knowledge</a></b><br/>
+		with Carsten Baum, Bernardo David<br/>
+		ProvSec 2022<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b>
+	A Spendable Cold Wallet from QR Video</b><br/>
+		with Myl&egrave;ne C.Q. Farias, Mario Larangeira, Anderson C. A. Nascimento, Jot Virdee<br/>
+		SECRYPT 2022<br/>
 	</span><br/>
 </li>
 
