--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 </li>
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b>
-	 Range Search on Encrypted Spatial Data with Dynamic Updates</b><br/>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/JCS-KDSS+22.pdf">
+	 Range Search on Encrypted Spatial Data with Dynamic Updates</a></b><br/>
 		with Shabnam Kasra Kermanshahi, Shangqi Lai, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
-		Journal of Computer Security<br/>
+		Journal of Computer Security, 2022<br/>
 	</span><br/>
 </li>
 
@@ -81,8 +81,8 @@
 </li>
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b>
-	A Spendable Cold Wallet from QR Video</b><br/>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/SECRYPT-DFLMV22.pdf">
+	A Spendable Cold Wallet from QR Video</a></b><br/>
 		with Myl&egrave;ne C.Q. Farias, Mario Larangeira, Anderson C. A. Nascimento, Jot Virdee<br/>
 		SECRYPT 2022<br/>
 	</span><br/>
