--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
 <h2>Papers </h2>
 <ul>
 
-
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2022/1151.pdf">
+	A Survey on Exotic Signatures for Post-Quantum Blockchain: Challenges & Research Directions</a></b><br/>
+		with Maxime Buser, Muhammed F. Esgin, Cl&eacute;mentine Gritti, Shabnam Kasra Kermanshahi, Veronika Kuchta, Jason T. LeGrow, Joseph K. Liu, Rapha&euml;l C.-W. Phan, Amin Sakzad, Ron Steinfeld, Jiangshan Yu<br/>
+		To appear at ACM Computing Surveys<br/>
+	</span><br/>
+</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/302.pdf">
