--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
 	</span><br/>
 </li>
 
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/JCS-KDSS+22.pdf">
+	 Range Search on Encrypted Spatial Data with Dynamic Updates</a></b><br/>
+		with Shabnam Kasra Kermanshahi, Shangqi Lai, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
+		To appear at Journal of Computer Security<br/>
+	</span><br/>
+</li>
+
+
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/302.pdf">
 	Post-Quantum Verifiable Random Function from Symmetric Primitives in PoS Blockchain</a></b><br/>
@@ -70,13 +80,6 @@
 	</span><br/>
 </li>
 
-<li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/JCS-KDSS+22.pdf">
-	 Range Search on Encrypted Spatial Data with Dynamic Updates</a></b><br/>
-		with Shabnam Kasra Kermanshahi, Shangqi Lai, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
-		Journal of Computer Security, 2022<br/>
-	</span><br/>
-</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/207.pdf">
