--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		investigations are into privacy-preserving machine learning and blockchain technologies.
 		<br/><br/>
 		
-<b style="color:red">News: I am part of the Program Committee of <a href="https://fc23.ifca.ai">FC 2023</a> and looking forward to read all your great contributions!</b><br/><br/>
+<b style="color:red">News: I am part of the Program Committee of <a href="https://fc23.ifca.ai">FC 2023</a> and <a href="https://icdcs2023.icdcs.org">ICDCS 2023</a>, looking forward to read all your great contributions!</b><br/><br/>
 	
 
 <b style="color:red">News: Our solution was a winner of the iDASH Secure Genome Analysis Competition 2021! You can check the details of the solution <a href="https://arxiv.org/pdf/2202.02625.pdf">here</a>.</b><br/>
