--- a/index.html
+++ b/index.html
@@ -48,15 +48,6 @@
 
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/JCS-KDSS+22.pdf">
-	 Range Search on Encrypted Spatial Data with Dynamic Updates</a></b><br/>
-		with Shabnam Kasra Kermanshahi, Shangqi Lai, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
-		To appear at Journal of Computer Security<br/>
-	</span><br/>
-</li>
-
-
-<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/302.pdf">
 	Post-Quantum Verifiable Random Function from Symmetric Primitives in PoS Blockchain</a></b><br/>
 		with Maxime Buser, Muhammed F. Esgin, Shabnam Kasra Kermanshahi, Veronika Kuchta, Joseph K. Liu, Rapha&euml;l C.-W. Phan, Zhenfei Zhang<br/>
@@ -77,6 +68,15 @@
 	Fast Privacy-Preserving Text Classification based on Secure Multiparty Computation</a></b><br/>
 		with Diego Aranha, Anderson C. A. Nascimento, Davis Railsback, Amanda Resende<br/>
 		IEEE Transactions on Information Forensics and Security, 2022<br/>
+	</span><br/>
+</li>
+
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/JCS-KDSS+22.pdf">
+	 Range Search on Encrypted Spatial Data with Dynamic Updates</a></b><br/>
+		with Shabnam Kasra Kermanshahi, Shangqi Lai, Joseph K. Liu, Surya Nepal, Amin Sakzad, Ron Steinfeld, Xun Yi<br/>
+		Journal of Computer Security, 2022<br/>
 	</span><br/>
 </li>
 
