--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
 <h2>Papers </h2>
 <ul>
 
+
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/784.pdf">
+	CRAFT: Composable Randomness Beacons and Output-Independent</a></b><br/>
+		with Carsten Baum, Bernardo David, Ravi Kishore, Jesper Buus Nielsen, Sabine Oechsner<br/>
+		To appear at PKC 2023<br/>
+	</span><br/>
+</li>
+
+
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2022/1151.pdf">
 	A Survey on Exotic Signatures for Post-Quantum Blockchain: Challenges & Research Directions</a></b><br/>
