--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2022/1151.pdf">
-	A Survey on Exotic Signatures for Post-Quantum Blockchain: Challenges & Research Directions</a></b><br/>
+	A Survey on Exotic Signatures for Post-Quantum Blockchain: Challenges and Research Directions</a></b><br/>
 		with Maxime Buser, Muhammed F. Esgin, Cl&eacute;mentine Gritti, Shabnam Kasra Kermanshahi, Veronika Kuchta, Jason T. LeGrow, Joseph K. Liu, Rapha&euml;l C.-W. Phan, Amin Sakzad, Ron Steinfeld, Jiangshan Yu<br/>
-		To appear at ACM Computing Surveys<br/>
+		ACM Computing Surveys, 2023<br/>
 	</span><br/>
 </li>
 
