--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		investigations are into privacy-preserving machine learning and blockchain technologies.
 		<br/><br/>
 	
-<b style="color:red">News: I will be one of the lectures in the <a href="https://ideas-ncbr.pl/en/2nd-school-on-privacy-preserving-machine-learning-2023/">2nd IACR Privacy-Preserving Machine Learning (PPML)school</a>. Hope to see you in Warsaw!</b><br/><br/>
+<b style="color:red">News: I will be one of the lectures in the <a href="https://ideas-ncbr.pl/en/2nd-school-on-privacy-preserving-machine-learning-2023/">2nd IACR School on Privacy-Preserving Machine Learning</a>. Hope to see you in Warsaw!</b><br/><br/>
 		
 		
 <b style="color:red">News: I am part of the Program Committee of <a href="https://asiacrypt.iacr.org/2023/">Asiacrypt 2023</a>, <a href="https://fc23.ifca.ai">FC 2023</a> and <a href="https://icdcs2023.icdcs.org">ICDCS 2023</a>, looking forward to read all your great contributions!</b><br/><br/>
