--- a/index.html
+++ b/index.html
@@ -42,15 +42,21 @@
 <ul>
 
 
-
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/784.pdf">
-	CRAFT: Composable Randomness Beacons and Output-Independent</a></b><br/>
+	CRAFT: Composable Randomness Beacons and Output-Independent Abort MPC From Time.</a></b><br/>
 		with Carsten Baum, Bernardo David, Ravi Kishore, Jesper Buus Nielsen, Sabine Oechsner<br/>
-		To appear at PKC 2023<br/>
+		PKC 2023<br/>
 	</span><br/>
 </li>
 
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/DEC-CDDG+23.pdf">
+	A Decentralized Information Marketplace Preserving Input and Output Privacy</a></b><br/>
+		with Martine De Cock, Bernardo David, Steven Golob, Mario Larangeira, Anderson Nascimento, Sikha Pentyala<br/>
+		ACM Data Economy Workshop 2023<br/>
+	</span><br/>
+</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2022/1151.pdf">
