--- a/index.html
+++ b/index.html
@@ -22,16 +22,11 @@
 		I have a keen interest in the design of cryptographic protocols to enhance privacy and most of my current 
 		investigations are into privacy-preserving machine learning and blockchain technologies.
 		<br/><br/>
-	
-<b style="color:red">News: I will be one of the lectures in the <a href="https://ideas-ncbr.pl/en/2nd-school-on-privacy-preserving-machine-learning-2023/">2nd IACR School on Privacy-Preserving Machine Learning</a>. Hope to see you in Warsaw!</b><br/><br/>
+			
 		
-		
-<b style="color:red">News: I am part of the Program Committee of <a href="https://asiacrypt.iacr.org/2023/">Asiacrypt 2023</a>, <a href="https://fc23.ifca.ai">FC 2023</a> and <a href="https://icdcs2023.icdcs.org">ICDCS 2023</a>, looking forward to read all your great contributions!</b><br/><br/>
+<b style="color:red">News: I am part of the Program Committee of <a href="https://asiacrypt.iacr.org/2023/">Asiacrypt 2023</a> and <a href="https://fc24.ifca.ai">FC 2024</a>, looking forward to read all your great contributions!</b><br/><br/>
 	
 	
-<b style="color:red">News: Our solution was a winner of the iDASH Secure Genome Analysis Competition 2021! You can check the details of the solution <a href="https://arxiv.org/pdf/2202.02625.pdf">here</a>.</b><br/>
-
-
 <div style="height:1px;font-size:1px;">&nbsp;</div>
 <h2><a href="http://scholar.google.com/citations?user=6NdIS2AAAAAJ&hl=en" target="_blank">Google Scholar</a></h2>
 
