--- a/index.html
+++ b/index.html
@@ -46,14 +46,6 @@
 </li>
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/DEC-CDDG+23.pdf">
-	A Decentralized Information Marketplace Preserving Input and Output Privacy</a></b><br/>
-		with Martine De Cock, Bernardo David, Steven Golob, Mario Larangeira, Anderson Nascimento, Sikha Pentyala<br/>
-		ACM Data Economy Workshop 2023<br/>
-	</span><br/>
-</li>
-
-<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2022/1151.pdf">
 	A Survey on Exotic Signatures for Post-Quantum Blockchain: Challenges and Research Directions</a></b><br/>
 		with Maxime Buser, Muhammed F. Esgin, Cl&eacute;mentine Gritti, Shabnam Kasra Kermanshahi, Veronika Kuchta, Jason T. LeGrow, Joseph K. Liu, Rapha&euml;l C.-W. Phan, Amin Sakzad, Ron Steinfeld, Jiangshan Yu<br/>
@@ -61,6 +53,21 @@
 	</span><br/>
 </li>
 
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/ISGT-DSRD23.pdf">
+	FDIAs on Hybrid Trading Transactive Energy Markets: Attacks, Impacts, and Prevention</a></b><br/>
+		with Rumpa Dasgupta, Amin Sakzad, Carsten Rudolph<br/>
+		IEEE PES ISGT Europe 2023<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/DEC-CDDG+23.pdf">
+	A Decentralized Information Marketplace Preserving Input and Output Privacy</a></b><br/>
+		with Martine De Cock, Bernardo David, Steven Golob, Mario Larangeira, Anderson Nascimento, Sikha Pentyala<br/>
+		ACM Data Economy Workshop 2023<br/>
+	</span><br/>
+</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2021/302.pdf">
