--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 		<h2> About me </h2>
 		
 		I am a Lecturer (Australian equivalent to Assistant Professor) in the <a href="https://www.monash.edu/it">Faculty of Information Technology</a> at Monash University. 
-		I am also the Deputy Course Director for the <a href="https://www.monash.edu/study/courses/find-a-course/2022/cybersecurity-c6002">Master of Cybersecurity</a>.
 		My research focuses on cryptography and its abundant intersections with machine learning, privacy and information theory. 
 		I have a keen interest in the design of cryptographic protocols to enhance privacy and most of my current 
 		investigations are into privacy-preserving machine learning and blockchain technologies.
 		<br/><br/>
 			
 		
-<b style="color:red">News: I am part of the Program Committee of <a href="https://asiacrypt.iacr.org/2023/">Asiacrypt 2023</a> and <a href="https://fc24.ifca.ai">FC 2024</a>, looking forward to read all your great contributions!</b><br/><br/>
+<b style="color:red">News: I am part of the Program Committee of <a href="https://icdcs2024.icdcs.org/technical-committee/">ICDSCS 2024</a> and <a href="https://fc24.ifca.ai">FC 2024</a>, looking forward to read all your great contributions!</b><br/><br/>
 	
 	
 <div style="height:1px;font-size:1px;">&nbsp;</div>
