--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<br/><br/>
 			
 		
-<b style="color:red">News: I am part of the Program Committee of <a href="https://icdcs2024.icdcs.org/technical-committee/">ICDSCS 2024</a> and <a href="https://fc24.ifca.ai">FC 2024</a>, looking forward to read all your great contributions!</b><br/><br/>
+<b style="color:red">News: I am part of the Program Committee of <a href="https://icdcs2024.icdcs.org">ICDCS 2024</a> and <a href="https://fc24.ifca.ai">FC 2024</a>, looking forward to read all your great contributions!</b><br/><br/>
 	
 	
 <div style="height:1px;font-size:1px;">&nbsp;</div>
