--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 		<h2> About me </h2>
 		
-		I am a Lecturer (Australian equivalent to Assistant Professor) in the <a href="https://www.monash.edu/it">Faculty of Information Technology</a> at Monash University. 
+		I am an academic in the <a href="https://www.monash.edu/it">Faculty of Information Technology</a> at Monash University. 
 		My research focuses on cryptography and its abundant intersections with machine learning, privacy and information theory. 
 		I have a keen interest in the design of cryptographic protocols to enhance privacy and most of my current 
 		investigations are into privacy-preserving machine learning and blockchain technologies.
