--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		
 		<h2> About me </h2>
 		
-		I am an academic in the <a href="https://www.monash.edu/it">Faculty of Information Technology</a> at Monash University. 
+		I am a Senior Lecturer (Australian equivalent to Associate Professor in North America) at <a href="https://www.monash.edu/it">Faculty of Information Technology</a> at Monash University. 
 		My research focuses on cryptography and its abundant intersections with machine learning, privacy and information theory. 
 		I have a keen interest in the design of cryptographic protocols to enhance privacy and most of my current 
 		investigations are into privacy-preserving machine learning and blockchain technologies.
 		<br/><br/>
 			
 		
-<b style="color:red">News: I am part of the Program Committee of <a href="https://icdcs2024.icdcs.org">ICDCS 2024</a> and <a href="https://fc24.ifca.ai">FC 2024</a>, looking forward to read all your great contributions!</b><br/><br/>
+<b style="color:red">I am an associate editor of the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8858">IEEE Transactions on Dependable and Secure Computing</a>, looking forward to read all your great contributions!</b><br/><br/>
 	
 	
 <div style="height:1px;font-size:1px;">&nbsp;</div>
