--- a/index.html
+++ b/index.html
@@ -35,10 +35,33 @@
 <h2>Papers </h2>
 <ul>
 
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2024/628.pdf">
+	MUSEN: Aggregatable Key-Evolving Veriﬁable Random Functions and Applications</a></b><br/>
+		with Bernardo David, Anders Konring, Mario Larangeira<br/>
+		To appear at SCN 2024<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2304.06179">
+	SePEnTra: A secure and privacy-preserving energy trading mechanism in the transactive energy market</a></b><br/>
+		with Rumpa Dasgupta, Carsten Rudolph, Amin Sakzad<br/>
+		To appear at ProvSec 2024<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2023/1644">
+	An End-to-End Framework for Private DGA Detection as a Service</a></b><br/>
+		with Martine De Cock, Ricardo Jacobi, Ricardo J. M. Maia, Anderson C. A. Nascimento, Sikha Pentyala, Dustin Ray<br/>
+		To appear at PLOS One<br/>
+	</span><br/>
+</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/784.pdf">
-	CRAFT: Composable Randomness Beacons and Output-Independent Abort MPC From Time.</a></b><br/>
+	CRAFT: Composable Randomness Beacons and Output-Independent Abort MPC From Time</a></b><br/>
 		with Carsten Baum, Bernardo David, Ravi Kishore, Jesper Buus Nielsen, Sabine Oechsner<br/>
 		PKC 2023<br/>
 	</span><br/>
