--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2304.06179">
-	SePEnTra: A secure and privacy-preserving energy trading mechanism in the transactive energy market</a></b><br/>
+	SePEnTra: A Secure and Privacy-Preserving Energy Trading Mechanism in the Transactive Energy Market</a></b><br/>
 		with Rumpa Dasgupta, Carsten Rudolph, Amin Sakzad<br/>
 		To appear at ProvSec 2024<br/>
 	</span><br/>
