--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 		<br/><br/>
 			
 		
-<b style="color:red">I am an associate editor of the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8858">IEEE Transactions on Dependable and Secure Computing</a>, looking forward to read all your great contributions!</b><br/><br/>
+<b style="color:red">I am an associate editor of the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8858">IEEE Transactions on Dependable and Secure Computing</a>, and on the program committees of 
+<a href="https://fc25.ifca.ai/cfp.html">FC 2025</a> and <a href="https://pkc.iacr.org/2025/callforpapers.php">PKC 2025</a>. Looking forward to read all your great contributions!</b><br/><br/>
+	
 	
 	
 <div style="height:1px;font-size:1px;">&nbsp;</div>
