--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 		<h2> About me </h2>
 		
-		I am a Senior Lecturer (Australian equivalent to Associate Professor in North America) at <a href="https://www.monash.edu/it">Faculty of Information Technology</a> at Monash University. 
+		I am a Senior Lecturer (Australian equivalent to Associate Professor in North America) at <a href="https://www.monash.edu/it"> the Faculty of Information Technology</a> at Monash University. 
 		My research focuses on cryptography and its abundant intersections with machine learning, privacy and information theory. 
 		I have a keen interest in the design of cryptographic protocols to enhance privacy and most of my current 
 		investigations are into privacy-preserving machine learning and blockchain technologies.
@@ -41,7 +41,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2024/628.pdf">
 	MUSEN: Aggregatable Key-Evolving Veriﬁable Random Functions and Applications</a></b><br/>
 		with Bernardo David, Anders Konring, Mario Larangeira<br/>
-		To appear at SCN 2024<br/>
+		SCN 2024<br/>
 	</span><br/>
 </li>
 
@@ -49,7 +49,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2304.06179">
 	SePEnTra: A Secure and Privacy-Preserving Energy Trading Mechanism in the Transactive Energy Market</a></b><br/>
 		with Rumpa Dasgupta, Carsten Rudolph, Amin Sakzad<br/>
-		To appear at ProvSec 2024<br/>
+		ProvSec 2024<br/>
 	</span><br/>
 </li>
 
@@ -57,7 +57,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2023/1644.pdf">
 	An End-to-End Framework for Private DGA Detection as a Service</a></b><br/>
 		with Martine De Cock, Ricardo Jacobi, Ricardo J. M. Maia, Anderson C. A. Nascimento, Sikha Pentyala, Dustin Ray<br/>
-		To appear at PLOS One<br/>
+		PLOS One<br/>
 	</span><br/>
 </li>
 
