--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2023/1644.pdf">
 	An End-to-End Framework for Private DGA Detection as a Service</a></b><br/>
 		with Martine De Cock, Ricardo Jacobi, Ricardo J. M. Maia, Anderson C. A. Nascimento, Sikha Pentyala, Dustin Ray<br/>
-		PLOS One<br/>
+		PLOS One, 2024<br/>
 	</span><br/>
 </li>
 
